# sumry

./: README.md  main.py  pyproject.toml
sumry/: cli.py  readers.py
test_data/: sample.csv  sample.geojson
