[project]
name = "sumry"
version = "0.1.0"
description = "CLI utility for summarizing various data sources (CSV, Excel, GeoJSON, Shapefiles)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "pyproj>=3.6.0",
]

[project.scripts]
sumry = "sumry.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
